--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,9 @@
 body {
-  background-color: #8ec5fc;
-  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  background: rgb(97, 97, 97);
+  background: linear-gradient(
+    90deg,
+    rgba(97, 97, 97, 1) 0%,
+    rgba(164, 164, 164, 1) 52%,
+    rgba(91, 91, 91, 1) 100%
+  );
 }
