class of flexbox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,3 +63,16 @@ input:focus:invalid {
   color: red;
   border: red 3px solid;
 }
+
+.box {
+  background-color: aquamarine;
+  border-radius: 5px;
+  margin: 2px;
+  padding: 10px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
