--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,9 +17,6 @@ body {
 h1 {
   font-size: 3rem;
 }
-h2 {
-  font-size: 2rem;
-}
 
 header > img {
   display: block;
@@ -60,22 +57,48 @@ section {
 
 article {
   flex: 1;
+  cursor: pointer;
 }
 
 .promotion {
+  border-radius: 20px;
   background: black;
   overflow: hidden;
   height: 250px;
 }
 section.promotion img {
-  object-fit: cover;
-  opacity: 0.3;
+  opacity: 0.5;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
 }
 
 section.promotion article {
   position: absolute;
+  padding-left: 40px;
+  padding-right: 25%;
   color: #fff;
   font-family: 'Roboto', sans-serif;
+}
+
+section.information article {
+  border-radius: 20px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  margin: 20px;
+  background: #fff;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+article h2 {
+  text-align: center;
+  font-size: 3.4rem;
+}
+
+figure img {
+  border-radius: 20px;
+  width: 100%;
 }
 
 footer img {
@@ -90,6 +113,23 @@ footer {
 footer div {
   flex: 1;
 }
-.copiright {
+.copyright {
   border-top: 2px solid black;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
 }
